Integrate frontend with backend

--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,11 @@
         </form>
 
         <div id="output">
-            <h1>EIUEUEU</h1>
+            <h2>Resultados aparecerão aqui</h2>
         </div>
     </main>
-    
+
+    <script src="script.js"></script>
+
 </body>
 </html>
